--- a/index.html
+++ b/index.html
@@ -1,4 +1,91 @@
-/index.html
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Gunung Cupu — Conservation Farm & Nature Adventure</title>
+  <link rel="icon" href="logo.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html">
+        <img src="logo.svg" alt="Logo" />
+        <div>
+          <div class="title">Gunung Cupu</div>
+          <div class="sub">Conservation Farm & Nature Adventure</div>
+        </div>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">Beranda</a>
+        <a href="tentang.html">Tentang</a>
+        <a href="zona-z1.html">Zona Z1</a>
+        <a href="sekolah-alam.html">Sekolah Alam</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="unduhan.html">Unduhan</a>
+        <a href="kontak.html">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="hero">
+      <div class="hero-card">
+        <div class="hero-left">
+          <div class="kicker">🌿 Nafas Gunung Cupu</div>
+          <h1>Menanam sepanjang musim, merawat sepanjang waktu, menjaga sepanjang masa.</h1>
+          <p class="lead">
+            Kawasan konservasi berbasis penanaman jangka panjang di Sukajaya, Jonggol — membentuk ekosistem hutan rakyat,
+            menjaga mata air, dan membuka ruang belajar alam yang bertanggung jawab.
+          </p>
+          <div class="actions">
+            <a class="btn primary" href="tentang.html">Mulai dari Tentang</a>
+            <a class="btn soil" href="galeri.html">Lihat Galeri</a>
+            <a class="btn" href="unduhan.html">Unduh Dokumen</a>
+          </div>
+
+          <div class="badges">
+            <div class="badge">
+              <div class="b1">20+ tahun</div>
+              <div class="b2">pemulihan ekologis</div>
+            </div>
+            <div class="badge">
+              <div class="b1">Z1</div>
+              <div class="b2">inti konservasi</div>
+            </div>
+            <div class="badge">
+              <div class="b1>Agro–Eco–Edu</div>
+              <div class="b2">wisata & edukasi</div>
+            </div>
+          </div>
+        </div>
+        <div class="hero-right">
+          <img src="hero.jpg" alt="Lanskap Gunung Cupu" />
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="card">
+        <h2>Ringkas</h2>
+        <p>
+          Gunung Cupu mengintegrasikan konservasi hutan dan air, agroforestri, kebun herbal, eduwisata lingkungan,
+          dan wisata petualangan alam berskala kecil & terkendali. Semua aktivitas wisata dirancang untuk mendukung fungsi konservasi,
+          dengan prinsip daya dukung, zonasi, dan etika lingkungan.
+        </p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="small">© Gunung Cupu — Conservation Farm & Nature Adventure</div>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
+index.html
 /tentang.html
 
 <!doctype html>
