--- a/index.html
+++ b/index.html
@@ -3,6 +3,82 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tentang — Gunung Cupu</title>
+  <link rel="icon" href="logo.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html">
+        <img src="logo.svg" alt="Logo" />
+        <div>
+          <div class="title">Gunung Cupu</div>
+          <div class="sub">Conservation Farm & Nature Adventure</div>
+        </div>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">Beranda</a>
+        <a href="tentang.html">Tentang</a>
+        <a href="zona-z1.html">Zona Z1</a>
+        <a href="sekolah-alam.html">Sekolah Alam</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="unduhan.html">Unduhan</a>
+        <a href="kontak.html">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="section">
+      <div class="card">
+        <h2>Tentang Gunung Cupu</h2>
+        <p>
+          Kawasan Gunung Cupu berlokasi di Kampung Cigaruguy, Desa Sukajaya, Kecamatan Jonggol, Kabupaten Bogor, adalah kawasan
+          hasil konservasi berbasis penanaman jangka panjang yang membentuk ekosistem hutan rakyat. Vegetasi kawasan didominasi oleh
+          jati, mahoni, bambu, gaharu, aren, kemiri, serta berbagai tanaman buah dan tanaman obat. Proses rehabilitasi ini berkontribusi
+          signifikan terhadap pemulihan fungsi hidrologi, perlindungan tanah dan lereng, peningkatan keanekaragaman hayati, serta
+          keberlanjutan sumber air di wilayah sekitarnya.
+        </p>
+        <p>
+          Untuk menjaga kesinambungan ekosistem tersebut, Gunung Cupu dikembangkan sebagai kawasan agrowisata, konservasi, dan edukasi
+          terpadu berbasis masyarakat yang mengintegrasikan perlindungan lingkungan hidup, pertanian berkelanjutan, serta pemberdayaan ekonomi
+          masyarakat lokal. Pengembangan kawasan ini berlandaskan pada proses rehabilitasi dan restorasi lahan jangka panjang yang dimulai sejak
+          awal tahun 2000-an melalui inisiatif masyarakat, dipelopori oleh Nurdin, yang secara konsisten melakukan penanaman dan perawatan lahan
+          secara bertahap.
+        </p>
+        <p>
+          Pada awal pengembangannya, kawasan Gunung Cupu berada dalam kondisi lahan terdegradasi akibat aktivitas penambangan batu, dengan tutupan
+          vegetasi rendah dan fungsi hidrologi yang terganggu. Melalui proses penanaman berkelanjutan, kawasan ini bertransformasi menjadi lanskap hijau
+          dengan sistem agroforestri yang berfungsi ekologis, sekaligus memberikan manfaat sosial dan ekonomi bagi masyarakat sekitar.
+        </p>
+        <p>
+          Dalam kerangka pengembangan kawasan, Gunung Cupu diarahkan sebagai Conservation Farm and Natural Adventure, yaitu kawasan yang memadukan konservasi
+          hutan dan air, agroforestri, eduwisata lingkungan, serta wisata petualangan alam berskala kecil dan terkendali. Seluruh aktivitas wisata dirancang
+          untuk mendukung fungsi konservasi, dengan penerapan prinsip daya dukung kawasan, zonasi yang jelas, serta pengelolaan berbasis etika lingkungan.
+        </p>
+        <p>
+          Pengembangan kawasan dilaksanakan melalui pendekatan Agro–Eco–Edu Tourism, dengan program unggulan meliputi konservasi hutan dan air, kebun herbal,
+          edukasi pertanian dan lingkungan, wisata edukatif dan petualangan alam, serta penguatan UMKM desa. Masyarakat Desa Sukajaya berperan sebagai subjek utama
+          pengelolaan kawasan, baik sebagai petani konservasi, pemandu wisata, pengelola produk lokal, maupun mitra edukasi, sehingga manfaat ekonomi berjalan seiring
+          dengan pelestarian alam dan nilai sosial budaya.
+        </p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="small">© Gunung Cupu — Conservation Farm & Nature Adventure</div>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
+!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gunung Cupu — Conservation Farm & Nature Adventure</title>
   <link rel="icon" href="logo.svg" />
   <link rel="stylesheet" href="style.css" />
