--- a/index.html
+++ b/index.html
@@ -3,6 +3,67 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Zona Z1 — Gunung Cupu</title>
+  <link rel="icon" href="logo.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html">
+        <img src="logo.svg" alt="Logo" />
+        <div>
+          <div class="title">Gunung Cupu</div>
+          <div class="sub">Conservation Farm & Nature Adventure</div>
+        </div>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">Beranda</a>
+        <a href="tentang.html">Tentang</a>
+        <a href="zona-z1.html">Zona Z1</a>
+        <a href="sekolah-alam.html">Sekolah Alam</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="unduhan.html">Unduhan</a>
+        <a href="kontak.html">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="section">
+      <div class="card">
+        <h2>Zona Konservasi Inti (Z1)</h2>
+        <p>
+          Z1 adalah area dengan prioritas perlindungan tertinggi: menjaga mata air, vegetasi penyangga, dan habitat satwa.
+          Aktivitas di zona ini bersifat terbatas, berorientasi konservasi, riset, dan edukasi dengan pendampingan.
+        </p>
+
+        <div class="grid-2">
+          <div class="card">
+            <h2>Fokus</h2>
+            <p>• Perlindungan hutan & air • Riparian • Vegetasi bertingkat • Habitat indikator</p>
+          </div>
+          <div class="card">
+            <h2>Aturan Singkat</h2>
+            <p>• Tidak merusak vegetasi • Tidak membuang sampah • Jalur ditetapkan • Kapasitas dibatasi</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="small">© Gunung Cupu — Conservation Farm & Nature Adventure</div>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
+!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tentang — Gunung Cupu</title>
   <link rel="icon" href="logo.svg" />
   <link rel="stylesheet" href="style.css" />
