--- a/index.html
+++ b/index.html
@@ -3,6 +3,71 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sekolah Alam — Gunung Cupu</title>
+  <link rel="icon" href="logo.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html">
+        <img src="logo.svg" alt="Logo" />
+        <div>
+          <div class="title">Gunung Cupu</div>
+          <div class="sub">Conservation Farm & Nature Adventure</div>
+        </div>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">Beranda</a>
+        <a href="tentang.html">Tentang</a>
+        <a href="zona-z1.html">Zona Z1</a>
+        <a href="sekolah-alam.html">Sekolah Alam</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="unduhan.html">Unduhan</a>
+        <a href="kontak.html">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="section">
+      <div class="card">
+        <h2>Sekolah Alam</h2>
+        <p>
+          Program belajar di lanskap nyata: membaca ekosistem, mengenal tanaman obat, penyerbuk, air & satwa indikator,
+          hingga aksi regeneratif dan refleksi.
+        </p>
+
+        <div class="grid-3">
+          <div class="card">
+            <h2>Metode</h2>
+            <p>Observasi → Aksi → Refleksi (praktik lapangan, pendampingan).</p>
+          </div>
+          <div class="card">
+            <h2>Output</h2>
+            <p>LKS, dokumentasi, dan kontribusi pemulihan habitat (skala kecil).</p>
+          </div>
+          <div class="card">
+            <h2>Etika</h2>
+            <p>Keselamatan, disiplin jalur, dan tidak mengganggu flora-fauna.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="small">© Gunung Cupu — Conservation Farm & Nature Adventure</div>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
+!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Zona Z1 — Gunung Cupu</title>
   <link rel="icon" href="logo.svg" />
   <link rel="stylesheet" href="style.css" />
