--- a/galeri.html
+++ b/galeri.html
@@ -3,218 +3,117 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Galeri • Gunung Cupu</title>
-
-  <!-- Pakai CSS yang sama -->
+  <title>Galeri — Gunung Cupu</title>
+  <link rel="icon" href="logo.svg" />
   <link rel="stylesheet" href="style.css" />
-
-  <style>
-    /* Tambahan khusus galeri (aman, tidak ganggu halaman lain) */
-    .page { max-width: 1100px; margin: 0 auto; padding: 96px 20px 56px; }
-    .page h1 { margin: 0 0 10px; }
-    .page p.lead { opacity: .9; margin: 0 0 26px; }
-
-    .gallery-grid{
-      display:grid;
-      grid-template-columns: repeat(12, 1fr);
-      gap:14px;
-      margin-top: 18px;
-    }
-    .gitem{
-      grid-column: span 6;
-      border-radius: 16px;
-      overflow: hidden;
-      background: rgba(255,255,255,.04);
-      border: 1px solid rgba(255,255,255,.08);
-      cursor: pointer;
-    }
-    @media (max-width: 820px){ .gitem{ grid-column: span 12; } }
-    .gimg{
-      width:100%; height: 260px; object-fit: cover; display:block;
-      background: rgba(255,255,255,.03);
-    }
-    .gcap{
-      padding: 12px 12px 14px;
-      font-weight: 600;
-    }
-    .gsub{
-      padding: 0 12px 14px;
-      opacity: .85;
-      font-size: 14px;
-      margin-top: -10px;
-    }
-
-    /* Lightbox */
-    .lightbox{
-      position: fixed; inset: 0;
-      display:none;
-      align-items:center; justify-content:center;
-      background: rgba(0,0,0,.72);
-      z-index: 9999;
-      padding: 22px;
-    }
-    .lightbox.open{ display:flex; }
-    .lb-card{
-      width: min(980px, 96vw);
-      background: rgba(10,12,10,.9);
-      border: 1px solid rgba(255,255,255,.10);
-      border-radius: 18px;
-      overflow: hidden;
-      box-shadow: 0 18px 60px rgba(0,0,0,.55);
-    }
-    .lb-img{ width:100%; max-height: 72vh; object-fit: contain; display:block; background:#000; }
-    .lb-bottom{
-      display:flex; gap:10px; align-items:center; justify-content:space-between;
-      padding: 12px 14px;
-    }
-    .lb-text{ line-height: 1.2; }
-    .lb-title{ font-weight: 800; }
-    .lb-desc{ opacity:.85; font-size: 14px; margin-top: 4px; }
-    .lb-actions{ display:flex; gap:8px; }
-    .lb-btn{
-      border: 1px solid rgba(255,255,255,.14);
-      background: rgba(255,255,255,.06);
-      color: #fff;
-      padding: 8px 10px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-weight: 700;
-    }
-    .lb-btn:hover{ background: rgba(255,255,255,.10); }
-  </style>
 </head>
-
 <body>
-  <!-- NAV sederhana (sesuaikan kalau nav Anda beda) -->
-  <header class="topbar">
-    <div class="container">
+  <header class="nav">
+    <div class="container nav-inner">
       <a class="brand" href="index.html">
-        <img src="logo.svg" alt="Logo" width="28" height="28">
+        <img src="logo.svg" alt="Logo" />
         <div>
-          <div class="brand-title">Nafas Gunung Cupu</div>
-          <div class="brand-sub">Sekolah Alam & Konservasi</div>
+          <div class="title">Gunung Cupu</div>
+          <div class="sub">Conservation Farm & Nature Adventure</div>
         </div>
       </a>
-
-      <nav class="nav">
-        <a href="index.html#tentang">Tentang</a>
-        <a href="galeri.html" aria-current="page">Galeri</a>
-        <a href="index.html#zona-z1">Zona Z1</a>
-        <a href="index.html#unduhan">Unduhan</a>
-        <a href="index.html#kontak">Kontak</a>
+      <nav class="nav-links">
+        <a href="index.html">Beranda</a>
+        <a href="tentang.html">Tentang</a>
+        <a href="zona-z1.html">Zona Z1</a>
+        <a href="sekolah-alam.html">Sekolah Alam</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="unduhan.html">Unduhan</a>
+        <a href="kontak.html">Kontak</a>
       </nav>
     </div>
   </header>
 
-  <main class="page">
-    <h1>Galeri Alam Gunung Cupu</h1>
-    <p class="lead">Dokumentasi lanskap, air, vegetasi, dan proses pemulihan ekologis.</p>
+  <main class="container">
+    <section class="section">
+      <div class="card">
+        <h2>Galeri Gunung Cupu</h2>
+        <p>Klik foto untuk melihat ukuran besar. Gunakan tombol ◀ ▶ atau tombol keyboard ← →.</p>
 
-    <section class="gallery-grid" id="galleryGrid">
-      <!-- GANTI path & caption sesuai file foto di assets/img -->
-      <figure class="gitem" data-full="assets/img/Air.jpg" data-title="Aliran air alami" data-desc="Sumber air dan aliran mikro yang terjaga oleh tutupan vegetasi.">
-        <img class="gimg" src="assets/img/Air.jpg" alt="Aliran air alami">
-        <figcaption class="gcap">Aliran air alami</figcaption>
-        <div class="gsub">Sumber air & mikrohabitat</div>
-      </figure>
+        <div class="gallery">
+          <!-- 1 -->
+          <figure class="figure">
+            <img
+              src="assets/img/galeri/air.jpg"
+              alt="Aliran air alami Gunung Cupu"
+              data-full="assets/img/galeri/air.jpg"
+              data-caption="Aliran air alami Gunung Cupu — indikator pemulihan hidrologi."
+            />
+            <figcaption>Aliran air alami</figcaption>
+          </figure>
 
-      <figure class="gitem" data-full="assets/img/Riparian.jpg" data-title="Zona riparian" data-desc="Koridor hijau tepi aliran air (riparian) untuk stabilisasi tebing dan habitat satwa.">
-        <img class="gimg" src="assets/img/Riparian.jpg" alt="Zona riparian">
-        <figcaption class="gcap">Zona riparian</figcaption>
-        <div class="gsub">Tepi sungai yang terlindungi</div>
-      </figure>
+          <!-- 2 -->
+          <figure class="figure">
+            <img
+              src="assets/img/galeri/hero.jpg"
+              alt="Lanskap hijau Gunung Cupu"
+              data-full="assets/img/galeri/hero.jpg"
+              data-caption="Lanskap hijau — mosaik agroforestri & hutan rakyat."
+            />
+            <figcaption>Lanskap hijau</figcaption>
+          </figure>
 
-      <figure class="gitem" data-full="assets/img/Vegetasi bertingkat.jpg" data-title="Vegetasi bertingkat" data-desc="Struktur tajuk bertingkat membantu serapan air, perlindungan tanah, dan keanekaragaman hayati.">
-        <img class="gimg" src="assets/img/Vegetasi bertingkat.jpg" alt="Vegetasi bertingkat">
-        <figcaption class="gcap">Vegetasi bertingkat</figcaption>
-        <div class="gsub">Tajuk berlapis & peneduh</div>
-      </figure>
+          <!-- 3 -->
+          <figure class="figure">
+            <img
+              src="assets/img/galeri/jambu.jpg"
+              alt="Tanaman buah (jambu) di Gunung Cupu"
+              data-full="assets/img/galeri/jambu.jpg"
+              data-caption="Tanaman buah — bagian dari sistem agroforestri."
+            />
+            <figcaption>Agroforestri buah</figcaption>
+          </figure>
 
-      <figure class="gitem" data-full="assets/img/Jambu.jpg" data-title="Tanaman pangan" data-desc="Agroforestri: kombinasi pohon dan tanaman produktif untuk ketahanan pangan.">
-        <img class="gimg" src="assets/img/Jambu.jpg" alt="Tanaman pangan">
-        <figcaption class="gcap">Tanaman pangan</figcaption>
-        <div class="gsub">Agroforestri produktif</div>
-      </figure>
+          <!-- 4 -->
+          <figure class="figure">
+            <img
+              src="assets/img/galeri/riparian.jpg"
+              alt="Zona riparian (sempadan sungai)"
+              data-full="assets/img/galeri/riparian.jpg"
+              data-caption="Zona riparian — vegetasi penyangga bantaran air."
+            />
+            <figcaption>Zona riparian</figcaption>
+          </figure>
 
-      <figure class="gitem" data-full="assets/img/Rumah Sunyi.Jpg" data-title="Rumah Sunyi" data-desc="Ruang hening untuk belajar, riset, dan residensi kecil yang mendukung edukasi alam.">
-        <img class="gimg" src="assets/img/Rumah Sunyi.Jpg" alt="Rumah Sunyi">
-        <figcaption class="gcap">Rumah Sunyi</figcaption>
-        <div class="gsub">Ruang belajar & residensi</div>
-      </figure>
-
-      <figure class="gitem" data-full="assets/img/hero.jpg" data-title="Lanskap Gunung Cupu" data-desc="Bentang bukit hijau hasil rehabilitasi penanaman jangka panjang.">
-        <img class="gimg" src="assets/img/hero.jpg" alt="Lanskap Gunung Cupu">
-        <figcaption class="gcap">Lanskap Gunung Cupu</figcaption>
-        <div class="gsub">Hutan rakyat & pemulihan</div>
-      </figure>
+          <!-- 5 -->
+          <figure class="figure">
+            <img
+              src="assets/img/galeri/rumah-sunyi.jpg"
+              alt="Rumah Sunyi (pondok)"
+              data-full="assets/img/galeri/rumah-sunyi.jpg"
+              data-caption="Rumah Sunyi — ruang hening untuk belajar & refleksi."
+            />
+            <figcaption>Rumah Sunyi</figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
+
+    <footer class="footer">
+      <div class="small">© Gunung Cupu — Conservation Farm & Nature Adventure</div>
+    </footer>
   </main>
 
   <!-- LIGHTBOX -->
   <div class="lightbox" id="lightbox" aria-hidden="true">
-    <div class="lb-card" role="dialog" aria-modal="true">
-      <img class="lb-img" id="lbImg" src="" alt="">
-      <div class="lb-bottom">
-        <div class="lb-text">
-          <div class="lb-title" id="lbTitle"></div>
-          <div class="lb-desc" id="lbDesc"></div>
-        </div>
+    <div class="lb-panel" role="dialog" aria-modal="true">
+      <div class="lb-top">
+        <div class="lb-cap" id="lbCaption">Keterangan foto</div>
         <div class="lb-actions">
-          <button class="lb-btn" id="lbPrev" type="button">◀</button>
-          <button class="lb-btn" id="lbNext" type="button">▶</button>
-          <button class="lb-btn" id="lbClose" type="button">Tutup ✕</button>
+          <button class="icon-btn" id="lbPrev" title="Sebelumnya">◀</button>
+          <button class="icon-btn" id="lbNext" title="Berikutnya">▶</button>
+          <button class="icon-btn" id="lbClose" title="Tutup">✕</button>
         </div>
       </div>
+      <img class="lb-img" id="lbImg" alt="Foto galeri" />
     </div>
   </div>
 
-  <script>
-    const items = Array.from(document.querySelectorAll('.gitem'));
-    const lb = document.getElementById('lightbox');
-    const lbImg = document.getElementById('lbImg');
-    const lbTitle = document.getElementById('lbTitle');
-    const lbDesc = document.getElementById('lbDesc');
-    const btnClose = document.getElementById('lbClose');
-    const btnNext = document.getElementById('lbNext');
-    const btnPrev = document.getElementById('lbPrev');
-
-    let idx = 0;
-
-    function openAt(i){
-      idx = (i + items.length) % items.length;
-      const it = items[idx];
-      const full = it.getAttribute('data-full');
-      const title = it.getAttribute('data-title') || 'Foto';
-      const desc  = it.getAttribute('data-desc')  || '';
-      lbImg.src = full;
-      lbImg.alt = title;
-      lbTitle.textContent = title;
-      lbDesc.textContent = desc;
-      lb.classList.add('open');
-      document.documentElement.style.overflow = 'hidden';
-    }
-
-    function closeLb(){
-      lb.classList.remove('open');
-      lbImg.src = '';
-      document.documentElement.style.overflow = '';
-    }
-
-    items.forEach((it, i) => it.addEventListener('click', () => openAt(i)));
-    btnClose.addEventListener('click', closeLb);
-    btnNext.addEventListener('click', () => openAt(idx + 1));
-    btnPrev.addEventListener('click', () => openAt(idx - 1));
-
-    // klik area gelap untuk tutup
-    lb.addEventListener('click', (e) => { if(e.target === lb) closeLb(); });
-
-    // keyboard
-    document.addEventListener('keydown', (e) => {
-      if(!lb.classList.contains('open')) return;
-      if(e.key === 'Escape') closeLb();
-      if(e.key === 'ArrowRight') openAt(idx + 1);
-      if(e.key === 'ArrowLeft') openAt(idx - 1);
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
