--- a/index.html
+++ b/index.html
@@ -401,6 +401,65 @@ index.html
 /galeri.html
 <a href="galeri.html">Galeri</a>
 /kontak.html
+
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kontak — Gunung Cupu</title>
+  <link rel="icon" href="logo.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html">
+        <img src="logo.svg" alt="Logo" />
+        <div>
+          <div class="title">Gunung Cupu</div>
+          <div class="sub">Conservation Farm & Nature Adventure</div>
+        </div>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">Beranda</a>
+        <a href="tentang.html">Tentang</a>
+        <a href="zona-z1.html">Zona Z1</a>
+        <a href="sekolah-alam.html">Sekolah Alam</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="unduhan.html">Unduhan</a>
+        <a href="kontak.html">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="section">
+      <div class="card">
+        <h2>Kontak</h2>
+        <p>Isi kontak di bawah (WhatsApp/Email/Alamat/Maps link).</p>
+
+        <div class="grid-2">
+          <div class="card">
+            <h2>WhatsApp</h2>
+            <p class="small">Contoh: +62 xxx xxxx xxxx</p>
+          </div>
+          <div class="card">
+            <h2>Lokasi</h2>
+            <p class="small">Kampung Cigaruguy, Desa Sukajaya, Jonggol, Bogor</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="small">© Gunung Cupu — Conservation Farm & Nature Adventure</div>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
 <!doctype html>
 <html lang="id">
 <head>
